# AtomicIP-

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  PR_GUIDE.md  README.md  SECURITY-ADVISORY.md  jest.config.js  pr.md
.cargo/: audit.toml
.github/workflows/: blue-green-deploy.yml  mutation.yml  ops-tests.yml  rollback-test.yml
api-server/: Cargo.toml
api-server/src/: auth.rs  batch.rs  circuit_breaker.rs  compression.rs  deduplication.rs  dependency_injection.rs  distributed_tracing.rs  docs.rs  error_recovery.rs  fallback.rs  graphql.rs  handlers.rs  health.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  middleware_pipeline.rs  otel.rs  rate_limit.rs  request_queue.rs  request_signing.rs  response.rs  schemas.rs  sdk.rs  validation.rs  versioning.rs  webhook.rs
api-server/tests/: accessibility_tests.rs  compliance_tests.rs  integration_tests.rs
contracts/atomic_swap/: Cargo.toml
contracts/atomic_swap/src/: arbitration_tests.rs  batch_approval_tests.rs  batch_history_tests.rs  batch_swap_features_tests.rs  benchmarks.rs  chaos_tests.rs  cross_contract.rs  cross_contract_tests.rs  errors.rs  escrow_tests.rs  lib.rs  multi_signer_tests.rs  oracle_tests.rs  price_oracle.rs  prop_tests.rs  swap.rs  types.rs  utils.rs  validation.rs
contracts/ip_registry/: Cargo.toml
contracts/ip_registry/src/: benchmarks.rs  invariant_tests.rs  lib.rs  snapshot_tests.rs  test.rs  types.rs  upgrade_tests.rs  validation.rs
contracts/ip_registry/test_snapshots/differential_tests/differential_tests/: differential_verify_rejects_wrong_blinding_like_python.1.json
contracts/ip_registry/test_snapshots/mutation_tests/mutation_tests/: double_revoke_is_rejected.1.json  duplicate_hash_is_rejected.1.json  ids_are_sequential_starting_at_one.1.json  non_zero_hash_is_accepted.1.json  owner_index_contains_committed_ids.1.json  revoked_flag_is_set_after_revoke.1.json  stored_commitment_hash_matches_input.1.json
contracts/ip_registry/test_snapshots/snapshot_tests/snapshot_tests/: snapshot_after_revoke_ip.1.json  snapshot_existing_record_unchanged_after_new_commit.1.json  snapshot_owner_index_after_three_commits.1.json  snapshot_two_commits_independent_state.1.json
contracts/ip_registry/test_snapshots/test/tests/: test_batch_commit_ip_five.1.json  test_batch_commit_ip_sequential_with_single.1.json  test_batch_commit_ip_single.1.json  test_check_expiration_warning_emits_event_when_expiring.1.json  test_check_expiration_warning_large_threshold.1.json  test_check_expiration_warning_not_expiring.1.json  test_commit_ip_pow_difficulty_eight_accepts_leading_zero_byte.1.json  test_commit_ip_pow_difficulty_four_accepts_half_zero_nibble.1.json  test_commit_ip_pow_difficulty_zero_always_passes.1.json  test_commit_ip_sequential_ids.1.json  test_commitment_checksum_reflects_all_commitments.1.json  test_commitment_checksum_updated_on_commit.1.json  test_get_ip_lineage_includes_root_and_versions.1.json  test_get_ip_version_chain_includes_all.1.json  test_get_ip_versions_empty_for_no_versions.1.json  test_get_ip_versions_returns_direct_children.1.json  test_get_partial_disclosure_none_before_reveal.1.json  test_is_ip_owner.1.json  test_list_ip_by_owner_returns_all_ids.1.json  test_list_ip_by_owner_unknown_returns_empty.1.json  test_notarize_ip_timestamp_invalid_signature_panics.1.json  test_notarize_ip_timestamp_no_public_key_panics.1.json  test_notarize_ip_timestamp_with_valid_signature.1.json  test_notarize_ip_timestamp_wrong_sig_length_panics.1.json  test_reveal_partial_requires_owner_auth.1.json  test_reveal_partial_valid_proof_returns_true_and_stores.1.json  test_reveal_partial_wrong_blinding_returns_false.1.json  test_reveal_partial_wrong_partial_hash_returns_false.1.json  test_revoke_ip_emits_event.1.json  test_revoke_ip_marks_record_revoked.1.json  test_revoke_ip_requires_owner_auth.1.json  test_revoke_ip_twice_panics.1.json  test_transfer_ip_emits_event.1.json  test_transfer_ip_ownership_successful.1.json  test_transfer_ip_ownership_unauthorized_rejected.1.json  test_transfer_ip_requires_owner_auth.1.json  test_transfer_ip_updates_owner_and_indexes.1.json  test_verify_commitment_with_invalid_secret_fails.1.json
contracts/ip_registry/test_snapshots/tests/: test_commit_ip_version_links_parent.1.json  test_commitment_timestamp_accuracy.1.json  test_get_ip_version_chain_multiple_versions.1.json  test_get_ip_version_chain_single.1.json  test_non_owner_commit_succeeds_with_mock_all_auths.1.json  test_version_chain_preserves_prior_art.1.json
docs/: accessibility-testing.md  api-batch-requests.md  api-caching.md  api-enhancements-integration.md  api-enhancements-summary.md  api-enhancements.md  api-reference.md  api-request-deduplication.md  atomic-swap.md  backup-integrity-verification.md  batch-swap-approval-testing.md  batch-swap-history-testing.md  blue-green-deployment.md  canary-deployment.md  commitment-scheme.md  compliance-testing.md  contract-upgrade-testing.md  disaster-recovery-testing.md  graphql-subscriptions.md  integration-guide.md  rollback-testing.md  swap-batch-cancellation.md  swap-batch-dispute-resolution.md  swap-batch-expiry-extension.md  swap-batch-fee-calculation.md  swap-matching-engine.md  swap-royalty-tracking.md  threat-model.md
fuzz/: Cargo.toml
scripts/: backup-contract-state.sh  blue_green_deploy.sh  canary-deploy.sh  run-ops-tests.sh  test-backup-integrity.sh  test-canary-deployment.sh  test-disaster-recovery.sh  test_rollback.sh  verify-backup-integrity.sh
scripts/tests/: lib.sh
src/__tests__/: batchCanceller.test.js  batchCompressor.test.js  batchDisputeResolver.test.js  batchEncryptor.test.js  batchExpiryExtender.test.js  batchFeeCalculator.test.js  swapMatchingEngine.test.js  swapRoyaltyTracker.test.js
src/batch/: batchCanceller.js  batchCompressor.js  batchConditionalCompletion.js  batchDisputeResolver.js  batchEncryptor.js  batchExpiryExtender.js  batchFeeCalculator.js  batchPartialPayment.js  batchPricing.js  batchRoyaltyDistributor.js
src/matching/: swapMatchingEngine.js
src/royalty/: swapRoyaltyTracker.js
