[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
http-body-util = "0.1"
once_cell = "1"
dashmap = "5"
tokio-tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-graphql = "0.12"
async-graphql-axum = "0.12"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
regex = "1"
base64 = "0.22"
flate2 = "1.0"
brotli = "7.0"
