[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# Stand-alone workspace declaration so this crate can be built independently
# without being added to the root workspace (which has a separate Soroban
# contract dependency graph).
[workspace]

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = ["axum_extras"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.16"
tonic = "0.12"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http-body-util = "0.1"
once_cell = "1"
dashmap = "5"
tokio-tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-graphql = "7"
async-graphql-axum = "7"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
hmac = "0.12"
jsonwebtoken = "9"
stellar-strkey = "0.0.8"
rand = "0.8.6"
regex = "1"
base64 = "0.22"
flate2 = "1.0"
brotli = "7.0"
