[package]
name = "ip_registry-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
ip_registry = { path = "../contracts/ip_registry", features = ["testutils"] }
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "fuzz_verify_commitment"
path = "fuzz_targets/fuzz_verify_commitment.rs"
test = false
doc = false

[[bin]]
name = "fuzz_batch_commitments"
path = "fuzz_targets/fuzz_batch_commitments.rs"
test = false
doc = false

[[bin]]
name = "fuzz_reveal_partial"
path = "fuzz_targets/fuzz_reveal_partial.rs"
test = false
doc = false

[[bin]]
name = "fuzz_api_request_parsing"
path = "fuzz_targets/fuzz_api_request_parsing.rs"
test = false
doc = false
