[package]
name = "atomic_swap"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.1", features = ["alloc"] }
ip_registry = { path = "../ip_registry" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
ip_registry = { path = "../ip_registry", features = ["testutils"] }
proptest = { version = "1", default-features = false, features = ["std"] }
