[package]
name = "ip_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
