[package]
name = "ip_registry"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.1", features = ["alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
proptest = { version = "1", default-features = false, features = ["std"] }
